--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@
 /* Grunnleggende stil for html og body */
 html,
 body {
-    width: fit-content; /* Setter bredden til innholdets bredde */
+    width: 100%; /* Setter bredden sånn at hele htmlen blir dekket*/
     height: max-content; /* Setter høyden til innholdets høyde */
     margin: 0; /* Fjerner standard margin */
     padding: 0; /* Fjerner standard padding */
@@ -159,6 +159,7 @@ main {
     width: calc(100% - 60px); /* Setter bredden til 100% */
     max-height: 1500px; /* Setter maksimal høyde */
     padding: 20px; /* Legger til padding */
+    padding-bottom: 30rem;
 }
 /* Stil for første hovedseksjon */
 #main-1 {
