--- a/style/style.css
+++ b/style/style.css
@@ -65,8 +65,9 @@ nav {
 }
 
 .card-title {
-    font-size: 1.5em;
+    font-size: 1em;
     margin: 0 0 10px;
+    line-height: normal;
     color: #ffffff;
 }
 
